--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "node2",
+  "name": "ad",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "express": "^4.17.1"
   }
 }
